Storing current state for review

--- a/installers/docker-compose/dependencies.env
+++ b/installers/docker-compose/dependencies.env
@@ -6,3 +6,4 @@ GITLAB_IMAGE_VERSION=13.9.3-ce.0
 LEGEND_SDLC_IMAGE_VERSION=0.45.0
 LEGEND_ENGINE_IMAGE_VERSION=2.39.0
 LEGEND_STUDIO_IMAGE_VERSION=0.2.56
+LEGEND_QUERY_IMAGE_VERSION=5.4.0
