--- a/installers/docker-compose/legend-query/templates/.env
+++ b/installers/docker-compose/legend-query/templates/.env
@@ -1,12 +1,29 @@
 BUILD_DIR=__BUILD_DIR__
 
+# Java
+TRUSTSTORE_PASSWORD=changeit
+
 # Mongo
 MONGO_SERVICE_NAME=mongod
 MONGO_PORT=27017
 MONGO_USER=admin
 MONGO_PASSWORD=__MONGO_PASSWORD__
 
+# Legend Query
+LEGEND_QUERY_IMAGE_VERSION=5.4.0
+LEGEND_QUERY_PORT=8080
+LEGEND_QUERY_SERVICE_NAME=query
+
 # Gitlab
+GITLAB_SERVICE_NAME=gitlab
+GITLAB_KEY_FILE=__GITLAB_KEY_FILE__
+GITLAB_CERT_FILE=__GITLAB_CERT_FILE__
+GITLAB_HOST=__GITLAB_HOST__
+GITLAB_HOST_NAME=__GITLAB_HOST_NAME__
+GITLAB_PORT=6443
+GITLAB_ROOT_USER=root
+GITLAB_ROOT_PASSWORD=__GITLAB_ROOT_PASSWORD__
+GITLAB_PRIVATE_ACCESS_TOKEN=__GITLAB_PRIVATE_ACCESS_TOKEN__
 GITLAB_URL=__GITLAB_URL__
 
 # Legend SDLC
@@ -23,8 +40,3 @@ LEGEND_ENGINE_PUBLIC_URL=__LEGEND_ENGINE_PUBLIC_URL__
 LEGEND_STUDIO_SERVICE_NAME=studio
 LEGEND_STUDIO_PORT=8080
 LEGEND_STUDIO_PUBLIC_URL=__LEGEND_STUDIO_PUBLIC_URL__
-
-# Legend Query
-LEGEND_QUERY_PORT=9090
-LEGEND_QUERY_SERVICE_NAME=query
-LEGEND_QUERY_PUBLIC_URL=__LEGEND_QUERY_PUBLIC_URL__
