--- a/installers/docker-compose/legend-with-remote-gitlab/templates/.env
+++ b/installers/docker-compose/legend-with-remote-gitlab/templates/.env
@@ -28,3 +28,13 @@ LEGEND_STUDIO_PUBLIC_URL=__LEGEND_STUDIO_PUBLIC_URL__
 LEGEND_QUERY_PORT=9090
 LEGEND_QUERY_SERVICE_NAME=query
 LEGEND_QUERY_PUBLIC_URL=__LEGEND_QUERY_PUBLIC_URL__
+
+# Legend Depot
+LEGEND_DEPOT_PORT=8075
+LEGEND_DEPOT_SERVICE_NAME=depot
+LEGEND_DEPOT_PUBLIC_URL=__LEGEND_DEPOT_PUBLIC_URL__
+
+# Legend Depot Store
+LEGEND_DEPOT_STORE_PORT=9075
+LEGEND_DEPOT_STORE_SERVICE_NAME=depot-store
+LEGEND_DEPOT_STORE_PUBLIC_URL=__LEGEND_DEPOT_STORE_PUBLIC_URL__
