--- a/installers/docker-compose/shared/templates/engine/config.json
+++ b/installers/docker-compose/shared/templates/engine/config.json
@@ -76,5 +76,11 @@
       "port": 8090
     }
   },
-  "vaults": []
+  "vaults": [],
+  "relationalexecution": {
+    "tempPath": "/tmp/",
+    "temporarytestdb": {
+      "port": 9092
+    }
+  }
 }
