--- a/legend-demo/studio/config/httpConfig.json
+++ b/legend-demo/studio/config/httpConfig.json
@@ -45,9 +45,9 @@
       }
     },
     "logging": {
-      "level": "INFO",
+      "level": "DEBUG",
       "loggers" : {
-        "root": { "level": "info"},
+        "root": { "level": "debug"},
         "org.pac4j": { "level": "debug"}
       },
       "appenders": [
