--- a/legend-demo/sdlc/config/sdlc.demo.yaml
+++ b/legend-demo/sdlc/config/sdlc.demo.yaml
@@ -69,7 +69,7 @@ gitLab:
 
 logging:
   # Change this to affect library class logging
-  level: DEBUG
+  level: INFO
   appenders:
     - type: console
       logFormat: "%d{yyyy-MM-dd HH:mm:ss.SSS} %-5p [%thread] %c - %m%n"
