--- a/legend-demo/.env
+++ b/legend-demo/.env
@@ -1,2 +1,19 @@
+# MongoDB Version
+MONGODB_IMAGE_VERSION=4.2
+
+# Legend Versions
+LEGEND_ENGINE_VERSION=3.1.0
+LEGEND_SDLC_VERSION=0.75.0
+LEGEND_DEPOT_VERSION=1.0.0
+
+# GitLab Information
+GITLAB_USERNAME=
+GITLAB_PROJECT_ID=
+
+# GitLab Application Credentials
 GITLAB_SECRET=
 GITLAB_CLIENT_ID=
+
+# GitLab Deploy Token
+GITLAB_DEPLOY_TOKEN_USERNAME=
+GITLAB_DEPLOY_TOKEN_PASSWORD=
